[tool.poetry]
name = "sample-batch"
version = "0.1.0"
description = ""
authors = ["edge2992 <torune.summer@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_batch"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
